# Stock_Evaluation_by_LLM_Counsel

./: .gitignore  README.md  main.py  pyproject.toml  stock_price_test.py  test.py  todo_list.md
UI/: __init__.py  gradio.py
agents/: __init__.py  agents.py  debate_orchestrator.py  gradio_responses.py  prompt_loader.py  prompts.yaml  retriever_tool.py
config/: __init__.py  constants.py  paths.py
functions/: __init__.py  agent_tools_cash.py  agent_tools_portfolio.py  cash_management_helper_functions.py  debate_logic.py  gradio_responses.py  initialize_databases.py  retriever_tool.py  sec_functions.py  stock_data_management.py
logs/: __init__.py  llm_logger.py
market_data/: __init__.py  fake_market_data.py  finnhub_calls.py  real_market_data.py  stock_market_data.py
reports/: __init__.py  pdf_generator.py
reports/templates/: financial_report.html
tests/: test_new_llm.py
vector_store/: __init__.py  vs_addition.py  vs_creation.py
