[project]
name = "stock-evaluation-by-llm-councel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgar>=5.6.3",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.0.0",
    "tqdm>=4.67.1",
]
