[project]
name = "stock-evaluation-by-llm-councel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgartools>=5.2.0",
    "faiss-cpu>=1.13.1",
    "finnhub-python>=2.4.26",
    "gradio>=6.1.0",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mistralai>=1.1.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.21",
]
